[package]
name = "bandwidth"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
clap = { version = "4.1", features = ["derive"] }
bandwidth-common = { path = "../bandwidth-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
bytes = "1.4.0"
aya-bpf-bindings = { git = "https://github.com/aya-rs/aya", branch = "main" }

[[bin]]
name = "bandwidth"
path = "src/main.rs"
